# boneca

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: .coveragerc  .env.example  .flake8  .isort.cfg  Dockerfile  Dockerfile.dev  LOCAL_DEVELOPMENT.md  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_19_1400_859efdfc3f9f_initial_migration_setup.py  2025_09_22_1105_e89bb197f21b_add_user_table.py  2025_09_22_1126_c8d0de68abd3_add_user_table.py  2025_09_22_1141_14cfb7521394_add_user_table.py
backend/database/: README.md
backend/database/init/: 01-init-database.sql
backend/docs/: ARCHITECTURE.md  DATABASE_CONFIGURATION.md  EXAMPLE_REQUESTS.md  MIGRATIONS.md
backend/src/: main.py
backend/src/api/: __init__.py  router.py
backend/src/api/v1/: __init__.py  healthcheck.py  users.py
backend/src/core/: __init__.py  config.py  database.py  exceptions.py
backend/src/core/database/: __init__.py  db.py  session.py
backend/src/core/repositories/: __init__.py  base.py  example_usage.py  user_repository.py
backend/src/domain/: __init__.py
backend/src/domain/users/: __init__.py  models.py  schemas.py
backend/src/scripts/: entrypoint-dev.sh  entrypoint.sh
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_router.py
backend/tests/api/v1/: test_healthcheck.py  test_users.py  test_users_errors.py
backend/tests/core/: test_config.py  test_database.py  test_database_module.py  test_exceptions.py
backend/tests/core/repositories/: test_base.py  test_user_repository.py
backend/tests/domain/users/: __init__.py  test_models.py  test_models_invalid_email.py  test_schemas.py
deployment/: .env.example  README.md  entrypoint.sh  pyproject.toml  rebuild.sh
deployment/src/: deployment.py  git.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
