[tool.poetry]
name = "boneca"
version = "0.1.0"
description = "Boneca - Dance School Management System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "api", from = "src"},
    {include = "core", from = "src"},
    {include = "domain", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
email-validator = "^2.1.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^24.2.6"
flake8-comprehensions = "^3.14.0"
flake8-simplify = "^0.21.0"
mypy = "^1.5.1"
hypothesis = "^6.98.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
